--- a/content/writings/sample-writing.mdx
+++ b/content/writings/sample-writing.mdx
@@ -2,6 +2,7 @@
 title: 'Sample Writing Post'
 date: '2024-07-26'
 summary: 'A brief description of this sample post.'
+ogImage: '/og/sample-writing.png'
 ---
 
 # This is the Main Heading (H1)
