--- a/writings/taming-new-devices.mdx
+++ b/writings/taming-new-devices.mdx
@@ -5,91 +5,61 @@ summary: 'A brief description of this sample post.'
 ogImage: '/og/sample-writing.png'
 ---
 
----
-
-I can't function properly with a cluttered setup of the devices I use daily. Mind you I am not talking about minimal setups, I am talking about cluttered setups. I need to know where I can find all my files and projects in any device I use daily. Let me show you how I setup my devices so they dont ruin my life.
-
----
+> Minimal setup, maximum control. Everything I need, nothing I don’t.
 
 ## macOS: Welcome, Now Let Me Fix You
 
-- **Setup Wizard Choices That Actually Matter**
-  - Migration Assistant? No, I like starting fresh
-  - Creating a simple user account with account name matching the full name : `danish` with lowercase `d`
-  - FileVault: Yes, encrypt everything
-  - Dont share anything with apple, no analytics, no audio recordings, no map data.
-  - Setup 3 touch IDs, twice of right hand index finger (for increases accuracy) and once of left hand index finger.
+This is how I set up a fresh macOS install — efficient, secure, and stripped of anything unnecessary.
 
-- **System Settings (atleast the important ones)**
-  - Default Monterey wallpaper (dark still)
-  - Appearance
-    - Click on the scroll bar to: Jump to spot that's clicked
-  - Desktop and Dock
-    - Click wallpaper to reveal desktop: Only in stage manager
-  - Displays
-    - More space
-  - Internet accounts
-    - Add the google accounts and work accounts
-  - Keyboard
-    - Edit input sources: Toggle off predictive texts and text replacement.
+### Setup Wizard: Only What Matters
 
-- **🚫 Killing the Bloat**
-  - Removing stock apps (or just hiding them like secrets)
-    
-    ![alt text](/writing-assets/mac.png)
+- No Migration Assistant – I prefer starting from scratch, not dragging over legacy issues.
+- User Account – Created as `danish` (lowercase), matching the full name.
+- FileVault – Enabled. Full disk encryption is non-negotiable.
+- Analytics and Tracking – All turned off. No Siri, no audio recordings, no map data shared.
+- Touch ID – Three fingerprints added for consistency and fallback.
 
-  - Disabling Siri (when was the last time you used siri) and Spotlight suggestions (use [raycast](https://www.raycast.com) instead).
-  - System Preferences > Notifications – a silent revolution (toggle **OFF** everything)
+### System Settings (The Important Ones)
 
-- **🛠 Terminal Time: The Real Setup Begins**
-  - Installing Homebrew please
-  - Aliases, shell configs, and my [dotfile](https://github.com/dan10ish/dotfiles) rituals
+- Wallpaper – Default macOS Monterey (Dark mode).
+- Appearance – Scrollbar behavior set to *Jump to the spot that’s clicked*.
+- Desktop & Dock – Click wallpaper to show desktop: *Only when using Stage Manager*.
+- Displays – Scaling set to *More Space*.
+- Internet Accounts – Connected Google and work accounts only.
+- Keyboard – Input sources edited to disable predictive text and text replacement.
 
-- **🧰 Must-Have Apps (No Fluff)**
-  - Safari and chrome. 
-  - Code editor: [Zed](https://zed.dev) and [Cursor](https://www.cursor.com)
-  - Terminal: [Ghostty](https://ghostty.org)
-  - Window tiler: [Rectangle](https://rectangleapp.com)
-  - Other stuff: [Stats](https://mac-stats.com), [Hazeover](https://apps.apple.com/in/app/hazeover-distraction-dimmer/id430798174?mt=12)
+### Removing the Bloat
 
-- **🧼 Final Polish**
-  - Menu bar pruning
-  - Backups: Local hard drive backups regularly
+- Stock Apps – Hidden or removed as much as possible.
 
----
+  ![alt text](/writing-assets/mac.png)
 
-## 🍏 iOS: From Hello to Hello Again
+- Siri – Disabled entirely.
+- Spotlight Suggestions – Turned off. Using [Raycast](https://www.raycast.com) instead.
+- Notifications – All system and app notifications disabled from System Settings.
 
-- **📱 Setup Screen Shenanigans**
-  - Choosing the right language (even if you only speak “Low Power Mode”)
-  - Quick Start vs Manual Setup – why I always go manual
-  - Wi-Fi selection: avoiding “Mom’s iPhone Hotspot”
+### Terminal Setup
 
-- **🔐 Apple ID or Apple Nope**
-  - Signing in without selling your soul (or enabling every iCloud toggle)
-  - Which iCloud services I actually use
+- Homebrew – Installed immediately.
+- Dotfiles – Pulled from [my repository](https://github.com/dan10ish/dotfiles) and applied.
+- Shell Config – Custom aliases and settings loaded to match my workflow.
 
-- **🧠 Privacy, Please**
-  - Location Services: Yes, but not *every* app
-  - Analytics & Siri – who needs to know what?
-  - Tracking toggle: off like it’s on fire
+> _vim and neovim sucks_
 
-- **⚙️ Core Settings Tweaks**
-  - Disabling Background App Refresh (aka: stealth battery killer)
-  - Notification clean-up: muting the noise
-  - App Limits – because discipline is a feature now
+### Essential Apps Only
 
-- **📦 App Store Essentials (and Exiles)**
-  - What gets installed immediately
-  - What never makes the cut (sorry Facebook)
+- Browsers – Safari (default) and Chrome (fallback).
+- Code Editors – [Zed](https://zed.dev) and [Cursor](https://www.cursor.com).
+- Terminal – [Ghostty](https://ghostty.org) for a fast, GPU-accelerated experience.
+- Window Management – [Rectangle](https://rectangleapp.com).
+- Utilities – [Stats](https://mac-stats.com), [HazeOver](https://apps.apple.com/in/app/hazeover-distraction-dimmer/id430798174?mt=12).
+- Dev: [Unity](https://unity.com), [Blender](https://www.blender.org), [Fusion 360](https://www.autodesk.com/in/products/fusion-360/overview)
 
-- **🔋 Battery Life Zen Mode**
-  - Dark mode always
-  - Auto-brightness: off, manual slider gang
-  - Low Power Mode shortcut – one tap to peace
+### Final Steps
 
----
+- Menu Bar – Cleaned up. Only essential indicators remain.
+- Backups – Local, frequent, and manual via external hard drive.
 
 > _Because the only thing worse than bloatware is uncurated defaults._
 
-> _Most default setting choices are a joke by apple, I swear.
+> Most default setting choices are a joke by apple, I swear.
