--- a/writings/taming-new-devices.mdx
+++ b/writings/taming-new-devices.mdx
@@ -31,9 +31,6 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 ### Removing the Bloat
 
 - Stock Apps – Hidden or removed as much as possible.
-
-  ![alt text](/writing-assets/mac.png)
-
 - Siri – Disabled entirely.
 - Spotlight Suggestions – Turned off. Using [Raycast](https://www.raycast.com) instead.
 - Notifications – All system and app notifications disabled from System Settings.
@@ -43,6 +40,9 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 - Homebrew – Installed immediately.
 - Dotfiles – Pulled from [my repository](https://github.com/dan10ish/dotfiles) and applied.
 - Shell Config – Custom aliases and settings loaded to match my workflow.
+
+![terminal](/writing-assets/terminal.png)
+
 
 > _vim and neovim sucks_
 
@@ -59,6 +59,9 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 
 - Menu Bar – Cleaned up. Only essential indicators remain.
 - Backups – Local, frequent, and manual via external hard drive.
+
+![mac launchpad](/writing-assets/mac.png)
+
 
 > _Because the only thing worse than bloatware is uncurated defaults._
 
