--- a/writings/taming-new-devices.mdx
+++ b/writings/taming-new-devices.mdx
@@ -1,8 +1,8 @@
 ---
 title: 'Taming New Devices'
 date: '30-04-2025'
-summary: 'A brief description of this sample post.'
-ogImage: '/og/sample-writing.png'
+summary: 'Minimal setup, maximum control. Everything I need, nothing I don’t.'
+ogImage: '/og/taming.png'
 ---
 
 > Minimal setup, maximum control. Everything I need, nothing I don’t.
@@ -19,7 +19,7 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 - Analytics and Tracking – All turned off. No Siri, no audio recordings, no map data shared.
 - Touch ID – Three fingerprints added for consistency and fallback.
 
-### System Settings (The Important Ones)
+### System Settings: The Important Ones
 
 - Wallpaper – Default macOS Monterey (Dark mode).
 - Appearance – Scrollbar behavior set to *Jump to the spot that’s clicked*.
@@ -46,7 +46,7 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 ![terminal](/writing-assets/terminal.png)
 
 
-> _vim and neovim sucks_
+> vim and neovim suck
 
 ### Essential Apps Only
 
@@ -62,7 +62,6 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 - Menu Bar – Cleaned up. Only essential indicators remain.
 - Backups – Local, frequent, and manual via external hard drive.
 
-![mac launchpad](/writing-assets/mac.png)
+![mac launchpad](/writing-assets/launchpad.png)
 
-
-> _Because the only thing worse than bloatware is uncurated defaults._
+> Because the only thing worse than bloatware is uncurated defaults.
