Blog errors and bug fixes

--- a/writings/taming-new-devices.mdx
+++ b/writings/taming-new-devices.mdx
@@ -17,7 +17,7 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 - User Account – Created as `danish` (lowercase), matching the full name.
 - FileVault – Enabled. Full disk encryption is non-negotiable.
 - Analytics and Tracking – All turned off. No Siri, no audio recordings, no map data shared.
-- Touch ID – Three fingerprints added for consistency and fallback.
+- Touch ID – Three fingerprints: Right index finger twice and left index finger once.
 
 ### System Settings: The Important Ones
 
@@ -65,3 +65,8 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 ![mac launchpad](/writing-assets/launchpad.png)
 
 > Because the only thing worse than bloatware is uncurated defaults.
+
+```python
+name = 'danish'
+print(f"Hello {name}")
+```
