--- a/writings/taming-new-devices.mdx
+++ b/writings/taming-new-devices.mdx
@@ -3,6 +3,7 @@ title: 'Taming New Devices'
 date: '30-04-2025'
 summary: 'Minimal setup, maximum control. Everything I need, nothing I don’t.'
 ogImage: '/og/taming.png'
+tags: ["setup", "macos", "ubuntu", "dotfiles", "productivity"]
 ---
 
 > Minimal setup, maximum control. Everything I need, nothing I don’t.
