Code block overflow fix

--- a/writings/neovim-making-it-mine.mdx
+++ b/writings/neovim-making-it-mine.mdx
@@ -6,7 +6,7 @@ ogImage: '/og/nvim-2025.png'
 tags: ["nvim", "neovim", "dotfiles", "lua", "setup", "productivity", "editor"]
 ---
 
-> Neovim out of the box? A bit like a wild horse. Powerful, sure, but it needs some serious taming before it's rideable. This is how I did it.
+> Neovim out of the box is powerful, but requires some configuration to truly make it your own. This is how I approached it.
 
 My Neovim configuration is all about control and efficiency. No fluff, just the tools I need to get things done without the editor getting in my way. The goal is a fast, intuitive environment that feels like an extension of my thoughts. You can find the [complete configuration in my dotfiles repository](https://github.com/dan10ish/dotfiles/blob/master/nvim/init.lua).
 
