--- a/writings/neovim-making-it-mine.mdx
+++ b/writings/neovim-making-it-mine.mdx
@@ -10,117 +10,98 @@ tags: ["nvim", "neovim", "dotfiles", "lua", "setup", "productivity", "editor"]
 
 My Neovim configuration is all about control and efficiency. No fluff, just the tools I need to get things done without the editor getting in my way. The goal is a fast, intuitive environment that feels like an extension of my thoughts. You can find the [complete configuration in my dotfiles repository](https://github.com/dan10ish/dotfiles/blob/master/nvim/init.lua).
 
-## Laying the Foundation: Packer & Core Settings
+## Laying the Foundation: Getting Started Right
 
-Plugin management is handled by [Packer.nvim](https://github.com/wbthomason/packer.nvim). It's a solid choice that keeps things organized. A simple autocommand ensures that any changes to my `init.lua` (like adding a new plugin) automatically trigger a sync, so I'm always up to date without thinking about it.
+When I decided to properly commit to Neovim, the first step was figuring out how to manage plugins. I landed on [Packer.nvim](https://github.com/wbthomason/packer.nvim) because it struck a good balance between being powerful and not overly complicated. I really appreciate that it can automatically sync plugins whenever I update my `init.lua` – one less thing to manually manage. My setup involves listing out the plugins I need, like this:
 
 ```lua
--- Packer.nvim: Ensuring it's installed and listing plugins
--- An autocommand group handles `PackerSync` on `init.lua` write.
+-- In my init.lua, Packer manages plugins like this:
 require('packer').startup(function(use)
   use 'wbthomason/packer.nvim' -- Packer itself
-  use 'neovim/nvim-lspconfig'  -- LSP configuration
-  use 'hrsh7th/nvim-cmp'       -- Autocompletion
-  -- ... other essential plugins like Telescope, Treesitter, etc.
+  -- ... and then other plugins like LSP, completion, etc.
 end)
 ```
 
-For Neovim's own settings, the focus is on a clean and predictable editing experience. Relative line numbers, for instance, are a game-changer for quick vertical navigation with count-prefixed commands. Using spaces instead of actual tab characters (`expandtab`) avoids a lot of cross-editor headaches. And, of course, integrating with the system clipboard (`unnamedplus`) is a must for practical yank and paste operations. My leader key is `<Space>` – it's accessible and doesn't clash with common shortcuts.
+Beyond plugins, a few core Neovim settings were crucial for making the editor feel comfortable and efficient. For instance, `vim.opt.relativenumber = true` was a game-changer. Being able to see line numbers relative to my cursor made jumping around with count-prefixed commands much faster than I was used to.
+
+Another small but significant tweak was `vim.opt.expandtab = true`. This ensures I'm always using spaces instead of actual tab characters, which has saved me from countless headaches when collaborating or switching between different environments. And of course, making sure Neovim plays nice with the system clipboard (`vim.opt.clipboard = 'unnamedplus'`) was a must for a smooth workflow.
+
+Finally, I set my leader key to `<Space>` (`vim.g.mapleader = ' '`). It's easy to reach and doesn't conflict with default bindings, making it a great starting point for my custom shortcuts. These initial settings formed the bedrock of a Neovim environment that started to feel truly *mine*.
+
+## Aesthetics: A Personal Touch with Transparency
+
+I like my workspace to feel integrated, and a solid block of editor opaque against my terminal always felt a bit jarring. That's why I opted for a touch of transparency in Neovim. By instructing it not to draw a background for elements like the main editing area (`Normal`) or my file explorer, my terminal's own transparency can show through. It's a small thing, but it makes Neovim feel more like a natural part of my setup rather than a heavy, separate application. A simple `autocmd` handles this:
 
 ```lua
--- A few key Neovim settings
-vim.opt.relativenumber = true     -- Navigate by line offset easily
-vim.opt.tabstop = 2             -- Tabs are visually 2 spaces
-vim.opt.expandtab = true        -- Insert spaces when Tab key is pressed
-vim.opt.clipboard = 'unnamedplus' -- Share clipboard with the OS
-vim.g.mapleader = ' '           -- Leader key set to Space
-```
-
-## Aesthetics: Transparency
-
-A touch of transparency helps Neovim integrate visually with my terminal setup, making it feel less like a separate, heavy application and more like a lightweight component of my workspace. This is achieved by telling Neovim to not draw a background for key UI elements like the main text area (`Normal`) or the NvimTree file explorer, letting my terminal's own transparency shine through.
-
-```lua
--- Making select UI elements transparent
+-- Allowing terminal transparency to show through
 vim.cmd [[
   augroup TransparentNvim
     autocmd!
     autocmd ColorScheme * highlight Normal guibg=NONE ctermbg=NONE
-    " ... similar highlights for NormalNC, NvimTreeNormal, etc. ...
+    " Similar for NormalNC, NvimTreeNormal, etc.
   augroup END
 ]]
 ```
 
-## Brains of the Operation: LSP, Completion, and Formatting
+## The Brains: LSP, Completion, and Auto-Formatting
 
-Modern coding heavily relies on Language Server Protocol (LSP) for features like go-to-definition, finding references, and inline diagnostics (errors/warnings). `nvim-lspconfig` is the backbone for setting this up. Autocompletion gets a massive boost with `nvim-cmp`, which intelligently suggests completions from various sources, including the LSP and `LuaSnip` for boilerplate or repetitive code snippets. This drastically reduces typing and typos.
+For me, a modern editor needs to understand my code. That's where the Language Server Protocol (LSP) comes in. Using `neovim/nvim-lspconfig`, I get essential features like go-to-definition, finding references, and seeing errors right as I type. It's like having a knowledgeable assistant built-in.
 
-To keep code neat and consistent without manual effort, `null-ls.nvim` integrates formatters like Prettier. It's configured to automatically format my code every time I save a file. This is a huge timesaver and ensures consistency, especially when working in teams.
+To cut down on typing and mistakes, `hrsh7th/nvim-cmp` for autocompletion has been invaluable. It pulls suggestions from various places, including the LSP and any snippets I have. This means less time typing boilerplate and more time thinking about the actual logic.
+
+And then there's code formatting. I used to spend so much time manually tidying up my code. Now, with `null-ls.nvim` and formatters like Prettier, it all happens automatically when I save. This not only saves time but also keeps my projects consistent, especially when I'm jumping between them. My config for these is pretty standard, focusing on getting LSP servers, completion sources, and formatters hooked up.
 
 ```lua
--- LSP: Setting up a language server (e.g., pyright for Python)
-require('lspconfig')['pyright'].setup {
-  capabilities = require('cmp_nvim_lsp').default_capabilities(),
-  -- ... other server-specific settings ...
-}
+-- Conceptual setup for LSP (e.g., pyright for Python)
+-- require('lspconfig')['pyright'].setup { capabilities = ... }
 
--- nvim-cmp: Autocompletion setup essentials
-require('cmp').setup({
-  snippet = { expand = function(args) require('luasnip').lsp_expand(args.body) end },
-  sources = { { name = 'nvim_lsp' }, { name = 'luasnip' }, { name = 'buffer' } },
-  mapping = { ['<CR>'] = require('cmp').mapping.confirm({ select = false }) /* ... more ... */ },
-})
+-- nvim-cmp gets configured with sources like nvim_lsp, luasnip, etc.
+-- require('cmp').setup({ sources = ... , mapping = ... })
 
--- null-ls: Auto-formatting with Prettier on save
-require('null-ls').setup({
-  sources = { require('null-ls').builtins.formatting.prettier },
-  on_attach = function(client, bufnr) -- Triggers format on save
-    if client.supports_method("textDocument/formatting") then
-      vim.api.nvim_create_autocmd("BufWritePre", { /* ... details ... */ })
-    end
-  end,
-})
+-- null-ls is set up with desired formatters, e.g., Prettier
+-- require('null-ls').setup({ sources = { formatting.prettier } })
 ```
 
 Preview:
 
 ![terminal](/writing-assets/LSP.png)
 
-## Navigation and Utility: Key Mappings & Essential Plugins
+## Smooth Navigation and Handy Utilities
 
-Efficiently moving around and interacting with my projects is key. `nvim-tree.lua` provides a familiar file explorer panel, quickly toggled with `<leader>e`, for a bird's-eye view of the project structure. For finding things, `telescope.nvim` is an absolute powerhouse. It does much more than just find files (`<leader>ff`); its live grep (`<leader>fg`) is incredibly fast for searching content across the entire project, with previews to boot. It can also search through open buffers, help tags, and more.
+Moving around a project efficiently is a big deal for me. For a visual overview, `nvim-tree.lua` gives me a file explorer panel, which I can quickly toggle with `<leader>e`. It's that familiar tree view that I find helpful for orienting myself in a new codebase.
 
-Commenting code quickly is handled by `Comment.nvim` (`<leader>/`), and `which-key.nvim` is a subtle but brilliant helper: it displays available keybindings after I press the leader key, which is great for discoverability and learning new mappings.
+But when it comes to *finding* things, `telescope.nvim` is my absolute go-to. Forget just finding files (`<leader>ff`); its live grep (`<leader>fg`) for searching through project content is incredibly fast and the previews are a lifesaver. It's one of those tools that, once you use it, you can't imagine going back.
+
+A couple of smaller plugins also make a big difference in my day-to-day. `Comment.nvim` for quick commenting (`<leader>/`) is a simple timesaver. And `which-key.nvim` is fantastic – it subtly shows available keybindings after I hit my leader key, which has been great for learning my own mappings and discovering what's possible. These little things add up to a much smoother experience.
 
 ```lua
--- Example Key Mappings
-local keymap_set = vim.keymap.set
-keymap_set('n', '<leader>e', ':NvimTreeToggle<CR>')      -- Toggle file explorer
-keymap_set('n', '<leader>ff', ':Telescope find_files<CR>') -- Find files with Telescope
-keymap_set('n', '<C-h>', '<C-w>h')                      -- Navigate window splits
+-- Some of my go-to mappings:
+-- vim.keymap.set('n', '<leader>e', ':NvimTreeToggle<CR>')
+-- vim.keymap.set('n', '<leader>ff', ':Telescope find_files<CR>')
+-- Window navigation mappings like <C-h>, <C-l>, etc.
 ```
 
 Preview:
 
 ![terminal](/writing-assets/FileGrep.png)
 
-## Pretty Code: Treesitter
+## Smarter Highlighting with Treesitter
 
-For syntax highlighting that actually understands the code's structure, not just matching keywords with regex, `nvim-treesitter` is essential. It parses the code into a syntax tree, leading to more accurate highlighting, better indentation, and enabling more advanced text objects and navigation in the future. I have it set to auto-install parsers for the languages I commonly work with.
+I used to think syntax highlighting was just about colors. Then I found `nvim-treesitter`. Instead of just using regex, it actually parses my code into a syntax tree. The result? Far more accurate highlighting that truly understands the code's structure. This also paves the way for better indentation and potentially more advanced text objects down the line. I've set it to automatically install parsers for the languages I use most. It's a subtle upgrade that makes reading and understanding code just that little bit easier.
 
 ```lua
--- nvim-treesitter: Ensuring parsers and enabling features
+-- Enabling Treesitter for better highlighting and indent
 require('nvim-treesitter.configs').setup {
-  ensure_installed = { "lua", "python", "javascript", "html", "css" /* ... more ... */ },
+  ensure_installed = { "lua", "python", "javascript", "html", "css" /* and others */ },
   auto_install = true,
   highlight = { enable = true },
   indent = { enable = true },
 }
 ```
 
-## Final Thoughts
+## Final Thoughts: A Setup That Works For Me
 
-This setup is lean, mean, and tailored to how I work. It didn't happen overnight; it's the result of countless tweaks and a drive to make Neovim a genuinely productive and enjoyable environment for me. It's proof that even the wildest, most intimidating tools can be tamed with a bit of Lua and patience, transforming them into powerful allies.
+This Neovim setup didn't just appear one day. It's been a journey of tweaking, experimenting, and figuring out what truly makes my coding life easier and more enjoyable. What started as a potentially intimidating editor has become a tool that feels molded to my hands. It's proof that with a bit of patience (and Lua!), even complex tools can be shaped into something personally productive.
 
 > Maybe Neovim doesn't entirely suck after all. With the right tweaks, it's pretty sharp.
 
