--- a/writings/neovim-making-it-mine.mdx
+++ b/writings/neovim-making-it-mine.mdx
@@ -2,7 +2,7 @@
 title: 'Neovim: Making It Mine'
 date: '16-05-2025'
 summary: "My personal Neovim setup: stripping it down, beefing it up, and making it actually work for me. Here's how my init.lua ticks."
-ogImage: '/og/nvim-2025.png'
+ogImage: '/og/nvim-2025.webp'
 tags: ["nvim", "neovim", "dotfiles", "lua", "setup", "productivity", "editor"]
 ---
 
