--- a/writings/neovim-making-it-mine.mdx
+++ b/writings/neovim-making-it-mine.mdx
@@ -1,9 +1,18 @@
 ---
-title: 'Neovim: Making It Mine'
-date: '16-05-2025'
-summary: "My personal Neovim setup: stripping it down, beefing it up, and making it actually work for me. Here's how my init.lua ticks."
-ogImage: '/og/nvim-2025.webp'
+title: "Neovim: Making It Mine"
+date: "16-05-2025"
+summary: "My personal Neovim setup: stripping it down, beefing it up, and making it actually work for 
+me. Here's how my init.lua ticks."
+displayImage: '/og/nvim-2025.webp'
+ogImage: '/og/nvim-2025.png'
 tags: ["nvim", "neovim", "dotfiles", "lua", "setup", "productivity", "editor"]
+author: "Danish Ansari"
+readTime: "8 min read"
+type: "article"
+locale: "en_US"
+alternateLocales: []
+keywords: ["nvim", "neovim", "dotfiles", "lua", "setup", "productivity", "editor"]
+canonicalUrl: "https://danish.bio/writings/neovim-making-it-mine"
 ---
 
 > Neovim out of the box is powerful, but requires some configuration to truly make it your own. This is how I approached it.
