--- a/writings/taming-new-devices.mdx
+++ b/writings/taming-new-devices.mdx
@@ -1,12 +1,20 @@
 ---
-title: 'Taming New Devices'
-date: '30-04-2025'
-summary: 'Minimal setup, maximum control. Everything I need, nothing I don’t.'
-ogImage: '/og/taming.webp'
+title: "Taming New Devices"
+date: "30-04-2025"
+summary: "Minimal setup, maximum control. Everything I need, nothing I don’t."
+displayImage: '/og/taming.webp'
+ogImage: '/og/taming.png'
 tags: ["setup", "macos", "ubuntu", "dotfiles", "productivity"]
+author: "Danish Ansari"
+readTime: "5 min read"
+type: "article"
+locale: "en_US"
+alternateLocales: []
+keywords: ["setup", "macos", "ubuntu", "dotfiles", "productivity"]
+canonicalUrl: "https://danish.bio/writings/taming-new-devices"
 ---
 
-> Minimal setup, maximum control. Everything I need, nothing I don’t.
+> Minimal setup, maximum control. Everything I need, nothing I don't.
 
 ## macOS: Welcome, Now Let Me Fix You
 
@@ -23,7 +31,7 @@ This is how I set up a fresh macOS install — efficient, secure, and stripped o
 ### System Settings: The Important Ones
 
 - Wallpaper – Default macOS Monterey (Dark mode).
-- Appearance – Scrollbar behavior set to *Jump to the spot that’s clicked*.
+- Appearance – Scrollbar behavior set to *Jump to the spot that's clicked*.
 - Desktop & Dock – Click wallpaper to show desktop: *Only when using Stage Manager*.
 - Displays – Scaling set to *More Space*.
 - Internet Accounts – Connected Google and work accounts only.
